--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Quản Lý Dạy Thêm",
-  "short_name": "QL Dạy Thêm",
+  "name": "Du lịch",
+  "short_name": "Du lịch",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
